--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +13,10 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
     "mongoose": "^6.0.6",
+    "multer": "^1.4.3",
+    "node-fetch": "^3.0.0",
     "nodemon": "^2.0.12",
     "validator": "^13.6.0"
   }
