--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +17,7 @@
     "multer": "^1.4.3",
     "node-fetch": "^3.0.0",
     "nodemon": "^2.0.12",
+    "sharp": "^0.29.1",
     "validator": "^13.6.0"
   }
 }
