--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-fetch": "^3.0.0",
     "nodemon": "^2.0.12",
     "sharp": "^0.29.1",
+    "socket.io": "^4.3.1",
     "validator": "^13.6.0"
   }
 }
